spelling corrections/slight structural changes

--- a/Model_Building.ipynb
+++ b/Model_Building.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NYPD Allegations\n",
-    "* **See the main project notebook for instructions to be sure you satisfy the rubric!**\n",
-    "* See Project 03 for information on the dataset.\n",
-    "* A few example prediction questions to pursue are listed below. However, don't limit yourself to them!\n",
-    "    * Predict the outcome of an allegation (might need to feature engineer your output column).\n",
-    "    * Predict the complainant or officer ethnicity.\n",
-    "    * Predict the amount of time between the month received vs month closed (difference of the two columns).\n",
-    "    * Predict the rank of the officer.\n",
-    "\n",
-    "Be careful to justify what information you would know at the \"time of prediction\" and train your model using only those features."
+    "# NYPD Allegations"
    ]
   },
   {
@@ -958,7 +949,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
