--- a/Cleaning_and_Analysis.ipynb
+++ b/Cleaning_and_Analysis.ipynb
@@ -4,31 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NYPD Civilian Complaints\n",
-    "This project contains data on 12,000 civilian complaints filed against New York City police officers. Interesting questions to consider include:\n",
-    "- Does the length that the complaint is open depend on ethnicity/age/gender?\n",
-    "- Are white-officer vs non-white complaintant cases more likely to go against the complainant? \n",
-    "- Are allegations more severe for cases in which the officer and complaintant are not the same ethnicity?\n",
-    "- Are the complaints of women more succesful than men (for the same allegations?)\n",
-    "\n",
-    "There are a lot of questions that can be asked from this data, so be creative! You are not limited to the sample questions above.\n",
-    "\n",
-    "### Getting the Data\n",
-    "The data and its corresponding data dictionary is downloadable [here](https://www.propublica.org/datastore/dataset/civilian-complaints-against-new-york-city-police-officers).\n",
-    "\n",
-    "Note: you don't need to provide any information to obtain the data. Just agree to the terms of use and click \"submit.\"\n",
-    "\n",
-    "### Cleaning and EDA\n",
-    "- Clean the data.\n",
-    "    - Certain fields have \"missing\" data that isn't labeled as missing. For example, there are fields with the value \"Unknown.\" Do some exploration to find those values and convert them to null values.\n",
-    "    - You may also want to combine the date columns to create a `datetime` column for time-series exploration.\n",
-    "- Understand the data in ways relevant to your question using univariate and bivariate analysis of the data as well as aggregations.\n",
-    "\n",
-    "### Assessment of Missingness\n",
-    "- Assess the missingness per the requirements in `project03.ipynb`\n",
-    "\n",
-    "### Hypothesis Test / Permutation Test\n",
-    "Find a hypothesis test or permutation test to perform. You can use the questions at the top of the notebook for inspiration."
+    "# NYPD Allegations"
    ]
   },
   {
@@ -2288,7 +2264,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2302,7 +2278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
